--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-</head>
-<body style="background: white;">
-    <h1>Hello World!</h1>
-    <p>
-        We are using node <script>document.write(process.versions.node)</script>,
-        Chrome <script>document.write(process.versions.chrome)</script>,
-        and Electron <script>document.write(process.versions.electron)</script>.
-    </p>
-</body>
+<html lang="de">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' 'unsafe-inline';"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Octoprint Mini UI</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="client.js"></script>
+  </head>
+  <body>
+    <main class="layout">
+        <section class="left">
+            <div class="withIcon iconHotend toolTemp">0°C / 0°C</div>
+            <div class="withIcon iconBed bedTemp">0°C / 0°C</div>
+            <div class="withIcon iconTimeElapsed timeElapsed"></div>
+            <div class="withIcon iconTimeLeft timeLeft"></div>
+        </section>
+        <section class="center">
+            <div class="progress">
+                <span class="percent"></span>
+                <canvas height="220" width="220"></canvas>
+            </div>
+        </section>
+        <section class="right">
+
+        </section>
+        <footer class="footer">
+            <p class="file"></p>
+        </footer>
+    </main>
+  </body>
 </html>
